--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 
     "@emotion/styled": "^11.13.0",
 
+    "@fortawesome/fontawesome-free": "^6.7.1",
+
     "@mui/material": "^6.1.6",
 
     "@testing-library/jest-dom": "^5.17.0",
@@ -23,6 +25,8 @@
     "@testing-library/user-event": "^13.5.0",
 
     "bootstrap": "^5.3.3",
+
+    "framer-motion": "^11.11.17",
 
     "react": "^18.3.1",
 
